@@ -8,9 +8,7 @@ AM_CPPFLAGS = 						\
 bin_PROGRAMS = devhelp
 
 devhelp_SOURCES =					\
-	dh-main.c					\
-	dh-assistant.c					\
-	dh-assistant.h
+	dh-main.c
 
 devhelp_CPPFLAGS =					\
 	$(AM_CPPFLAGS)
@@ -26,6 +24,7 @@ lib_LTLIBRARIES = libdevhelp-1.la
 
 devhelpincludedir = $(includedir)/devhelp-1.0/devhelp
 devhelpinclude_HEADERS = 				\
+	dh-assistant.h					\
 	dh-base.h					\
 	dh-book-tree.h					\
 	dh-error.h					\
@@ -39,6 +38,7 @@ libdevhelp_1_la_SOURCES =				\
 	bacon-message-connection.h			\
 	dh-marshal.c					\
 	dh-marshal.h					\
+	dh-assistant.c					\
 	dh-base.c					\
 	dh-book-tree.c					\
 	dh-error.c					\
